wp-content/themes/tcs-responsive/css/base.css
/* ... */
.errorLoading{
	background: #ff8a00;
	left: 38%;
	width:55%;
	max-width:400px;
	line-height:16px;
	font-size:0.9em;
	height:auto;
	text-align:center;
	padding:5px;
}
#wrapper{
    position: relative;
}
#wrapper > .content{
    background: #fffffe;
    position: relative;
    z-index: 5;
}
/* btns */
.btn, a.btn{
    display: inline-block;
    background: #ff9900;
    color: #fff;
    border-bottom: 4px solid #ff7a00;
    height: 32px;
    line-height: 34px;
    width: 130px;
    text-align: center;
    font-size: 15px;
    border-radius: 6px;
    behavior: url(./wp-content/themes/tcs-responsive/css/PIE.htc);
    position: relative;
}
    .btn:hover{
        background: #ff7a00;
        text-decoration: none;
    
        color: #fff;
}
.btnAlt, a.btnAlt{
    background: #00aeff;
    border-bottom: 4px solid #0096ff;
}
    .btnAlt:hover{
        background: #0096ff;
    
}
#navigation, #main{
    background: #fffffe;
}
 #main{
 
     position: relative;
}
/* header
---------------------------*/
#navigation{
    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25);
    z-index: 80;
    position: relative;
    z-index: 100;
    left: 0;
    top: 0;
    right: 0;
    background: #fffffe;
    behavior: url(./wp-content/themes/tcs-responsive/css/PIE.htc);
}
#navigation, #navigation > .container{
    height: 94px;
}
.logo{
    position: absolute;
    left: 0;
    top: 27px;
    width: 330px;
    height: 58px;
    background: url(../i/logo.png) 0 0 no-repeat;
}
    .logo a{
        display: block;
        height: 52px;    
        -moz-transition-duration: 0s; -webkit-transition-duration: 0s; transition-duration: 0s;
}
    
#mainNav{
    z-index: 10;
    position: absolute;
    right: 156px;
    top: 50px;
}
    #mainNav .root{
        min-height: 34px;
    }
    #mainNav .root > li{
        margin-left: 8px;
        float: left;        
    
        position: relative;
}
     #mainNav .root > li > .child{
     
        display: none;
}
     /*#mainNav .root > li:hover > .child{
       display: block;
}
    #mainNav .root > li.hover > .child{
       margin-top: 0;  
}*/
     #mainNav .root .child{
         display: block;  
         background: #FF8A00;
         min-width: 80px;
         position: absolute;
         min-width: 100%;
         left: 15px;
}
     
        #mainNav .root > li a{
            padding: 0 10px 12px 15px;
            color: #666;
            -moz-transition-duration: .3s; 
            -webkit-transition-duration: .3s; 
            transition-duration: .3s;
            height: 32px;
            line-height: 32px;        
            display: block;
            min-width: 55px;
            font-weight: bold;
}
        #mainNav .root .child > li{
            padding: 0 10px;
        			width: 175px;
            border-top: 1px solid #FF7A00;  
}
        #mainNav .root .child a{            
        
            padding: 0 6px 0 0;
            margin: 0 -10px;
            text-indent: 15px;
            display: block;
            font-size: 12px;
            min-width: 0;
            font-weight: normal;
            color: #fff;
            white-space: nowrap;
}
        #mainNav .root .child li:hover{
    background: #F00;
        }
        #mainNav .root > li:hover a{      
            text-decoration: none;
}
    
#navigation .btnRegister{
    position: absolute;
    right: 0;
    top: 49px;
}
#navigation .btnMyAcc{
    position: absolute;
    right: 0;
    top: 49px;
    padding-right: 24px;
    width: 106px;
}
    .btnMyAcc i{
        display: inline-block;
        width: 16px;
        height: 9px;
        position: absolute;    
        right: 13px;
        top: 13px;
        background: url(../i/ico-arrow.png) no-repeat;
        background-position: 0 0;      
        transition-duration: 0.3s;        
        cursor: pointer;
}
    .btnMyAcc.isActive i{
        background-position: 0 -12px;              
    }
#navigation .noReg{
    display: none;
}
#navigation.newUser .onReg{
    display: none;
}
#navigation.newUser .noReg{
    display: block;
}
#navigation.newUser .noReg.hide{
    display: none;
}
/* Page Title
---------------------------*/
.pageTitleWrapper {
	height: 65px;
	margin-bottom: 41px;
	background-color: #eeeeee;	
}
	.pageTitleWrapper .pageTitle{
		height: 65px;
		position: relative;
	}
		.pageTitleWrapper .pageTitle h2{
			position: absolute;
			top: 0;
			left: 1px;
			padding: 7px 0 21px 70px;
			line-height: 58px;
			background-image: url(../i/ico-title.png);
			background-repeat: no-repeat;
			background-position: 0 0;
			color: #666666;
			font-size: 30px;
		}
		.pageTitleWrapper .pageTitle h2.overviewPageTitle{
			background-position: 0 0;
		}
		.pageTitleWrapper .pageTitle h2.casePageTitle{
			background-position: 0 -90px;
		}
		.pageTitleWrapper .pageTitle h2.pressReleasePageTitle{
			background-position: 0 -180px;
		}
		.pageTitleWrapper .pageTitle h2.resourcePageTitle{
			background-position: 0 -270px;
		}
		.pageTitleWrapper .pageTitle h2.storyPageTitle{
			background-position: 0 -360px;
		}
		.pageTitleWrapper .pageTitle .backLink{
			float: right;
			font-size: 16px;
			font-weight: 300;
			margin-top: 24px;
		}
/* footer
---------------------------*/
#footer{
    background: #333;
    min-height: 244px;
    color: #959595;
    z-index: 100000;
    position: relative;
}
#footer .container{
    overflow: visible;
    padding-top: 26px;
    min-height: 100px;
}
#footer .updates{    
    margin-bottom: 25px;
}
    #footer .connected h4{
        padding-bottom: 16px;
        float: left;
        margin-right: 20px;
    }
#footer nav,
#footer .rootNode{
    float: left;
    width: 175px;
}    
    #footer nav li,
    #footer .rootNode li{
        min-height: 24px;
        line-height: 24px;    
        font-size: 12px;
}
    #footer nav a,
    #footer .rootNode a{
        color: #a1a1a1;
    }
    #footer nav a:hover,
    #footer .rootNode a:hover{
        color: #fff;
        text-decoration: none;
    }
/* ... */

